# BT--

./: .env.example  .gitattributes  .gitignore  .hintrc  .replit  AGENTS.md  AGENT_TASK_BRIEF.md  CLAUDE.md  Dockerfile.nemotron  IPHONE_INSTALL.md  Launch-BKLT-Blacklight.vbs  Launch-BT-Heiguang.vbs  Launch-ONYX-OVERRIDE.vbs  README.md  START.bat  START_APP.bat  START_DEV.bat  START_TAILSCALE_MOBILE.bat  USE_CODEX_OPENAI.bat  ai-agent-project.code-workspace  depth_infer.py  docker-compose.nemotron.yml  package-lock.json  package.json  pyproject.toml  pyrightconfig.json  replit.nix  requirements-agent-api.txt  requirements.txt  start.py  start_all.sh  打开小涵记忆配置.cmd  打开本机Gemma模型.cmd  打开项目-Cursor.cmd
.cursor/: settings.json
archive/: README.md
backend/: .env.dual-engine.example  .env.example  .env.llm-routes.example  .env.local-llamacpp.example  .env.local-vllm-nano.example  Dockerfile  MEMORY.md  MEMORY_FULL.md  SOUL.md  USER.md  USER_PRIVATE.md  USER_PROFILE.json  a2a_bridge.py  adaptive_dispatch.py  agent.py  agent_dispatch.py  agent_events.py  agent_intent.py  agent_policy.py  agent_progress.py  agent_prompts.py  agent_run_events.py  agent_run_graph_patch.py  agent_runtime.py  agent_session.py  agent_task_brief.py  agent_tool_map.py  automation_routes.py  automation_runner.py  automation_store.py  capability_executor.py  capability_prompt_rules.py  capability_registry.py  capability_routes.py  capability_runtime.py  chat.py  chat_action_prefetch.py  consciousness_loop.py  content_pipeline.py  content_routes.py  (+64 more)
data/: README.md
docs/: AGENT_RADAR_2026.md  GITHUB.md  (+25 more)
(+488 files in other folders)
